<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thedeveloperworldisyours.letters.main.MainFragment">

    <EditText
        android:id="@+id/main_fragment_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/main_fragment_button"
        android:hint="@string/main_activity_type_in" />

    <Button
        android:id="@+id/main_fragment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/main_activity_check" />

    <Button
        android:id="@+id/main_fragment_server_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_fragment_button"
        android:text="@string/main_activity_check_from_server" />

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/main_fragment_percent_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_fragment_server_button">

        <TextView
            android:id="@+id/main_fragment_first_text"
            android:background="@drawable/rectangle"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textSize="@dimen/main_activity_size_trail"
            app:layout_heightPercent="15%"
            app:layout_marginLeftPercent="2%"
            app:layout_marginTopPercent="2%"
            app:layout_widthPercent="15%" />

        <TextView
            android:id="@+id/main_fragment_second_text"
            android:layout_toRightOf="@+id/main_fragment_first_text"
            android:background="@drawable/rectangle"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textSize="@dimen/main_activity_size_trail"
            app:layout_heightPercent="15%"
            app:layout_marginLeftPercent="1%"
            app:layout_marginTopPercent="2%"
            app:layout_widthPercent="15%" />

        <TextView
            android:id="@+id/main_fragment_third_text"
            android:layout_toRightOf="@+id/main_fragment_second_text"
            android:background="@drawable/rectangle"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textSize="@dimen/main_activity_size_trail"
            app:layout_heightPercent="15%"
            app:layout_marginLeftPercent="1%"
            app:layout_marginTopPercent="2%"
            app:layout_widthPercent="15%" />

        <TextView
            android:id="@+id/main_fragment_fourth_text"
            android:layout_toRightOf="@+id/main_fragment_third_text"
            android:background="@drawable/rectangle"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textSize="@dimen/main_activity_size_trail"
            app:layout_heightPercent="15%"
            app:layout_marginLeftPercent="1%"
            app:layout_marginTopPercent="2%"
            app:layout_widthPercent="15%" />

        <TextView
            android:id="@+id/main_fragment_fifth_text"
            android:layout_toRightOf="@+id/main_fragment_fourth_text"
            android:background="@drawable/rectangle"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textSize="@dimen/main_activity_size_trail"
            app:layout_heightPercent="15%"
            app:layout_marginLeftPercent="1%"
            app:layout_marginTopPercent="2%"
            app:layout_widthPercent="15%" />

        <TextView
            android:id="@+id/main_fragment_sixth_text"
            android:layout_toRightOf="@+id/main_fragment_fifth_text"
            android:background="@drawable/rectangle"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textSize="@dimen/main_activity_size_trail"
            app:layout_heightPercent="15%"
            app:layout_marginLeftPercent="1%"
            app:layout_marginRightPercent="2%"
            app:layout_marginTopPercent="2%"
            app:layout_widthPercent="15%" />

    </android.support.percent.PercentRelativeLayout>

    <TextView
        android:id="@+id/main_fragment_main_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_fragment_percent_relative_layout"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:textSize="@dimen/main_activity_size_trail" />

</RelativeLayout>
